--- a/snipe.html
+++ b/snipe.html
@@ -95,7 +95,7 @@ https://templatemo.com/tm-546-sixteen-clothing
 </center>
 <center>
 <iframe
-    src="https://player.twitch.tv/?channel=mythrodak&muted=false&parent=snipe.mythrodak.com"
+    src="https://player.twitch.tv/?channel=mythrodak&muted=false&parent=creavites.github.io"
     height="480"
     width="852"
     class="chat"
@@ -105,7 +105,7 @@ https://templatemo.com/tm-546-sixteen-clothing
     allowfullscreen="true">
 </iframe>
 
-<iframe src="https://www.twitch.tv/embed/mythrodak/chat?darkpopout=true&parent=snipe.mythrodak.com"
+<iframe src="https://www.twitch.tv/embed/mythrodak/chat?darkpopout=true&parent=creavites.github.io"
         height="480"
         width="auto">
 </iframe>
