--- a/snipe.html
+++ b/snipe.html
@@ -91,7 +91,7 @@ https://templatemo.com/tm-546-sixteen-clothing
 <center>
 <a class="nav-link" href="https://hypixel.net/threads/guide-play-commands-useful-tools-mods-more-updated-12-25-20.1025608" target="_blank">(click here for a list of hypixel join commands)</a>
 <h4>Mythrodak Hypixel Tracker<h4>
-<iframe id="hypixelapi" src="https://snipe.mythrodak.com/api-pls-no" height="100" width="1162"></iframe>
+<iframe id="hypixelapi" src="https://creavites.github.io/Mythrodak/api-pls-no" height="100" width="1162"></iframe>
 </center>
 <center>
 <iframe
