--- a/snipe.html
+++ b/snipe.html
@@ -38,18 +38,18 @@ https://templatemo.com/tm-546-sixteen-clothing
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a href="http://mythrodak.com"><img src="assets/images/mythroicon.png" height="50">
+          <a href="http://creavites.github.io"><img src="assets/images/mythroicon.png" height="50">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="http://mythrodak.com">Home
+                <a class="nav-link" href="http://creavites.github.io">Home
                 </a>
               </li> 
               <li class="nav-item">
-                <a class="nav-link" href="https://mythrodak.com/prisons-escaped">Prisons Escaped</a>
+                <a class="nav-link" href="https://creavites.github.io/prisons-escaped">Prisons Escaped</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="https://discord.gg/mythrodak" target="_blank">Discord Server</a>
@@ -58,10 +58,10 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <a class="nav-link" href="https://www.youtube.com/c/mythrodaktv" target="_blank">YouTube</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://mythrodak.com/twitch">Twitch</a>
+                <a class="nav-link" href="https://creavites.github.io/twitch">Twitch</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="https://snipe.mythrodak.com/">Stream Sniping</a>
+                <a class="nav-link" href="https://snipe.creavites.github.io/">Stream Sniping</a>
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
