--- a/twitch.html
+++ b/twitch.html
@@ -38,14 +38,14 @@ https://templatemo.com/tm-546-sixteen-clothing
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a href="http://mythrodak.com"><img src="assets/images/mythroicon.png" height="50">
+          <a href="http://creavites.github.io"><img src="assets/images/mythroicon.png" height="50">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="http://mythrodak.com">Home
+                <a class="nav-link" href="http://creavites.github.io">Home
                 </a>
               </li> 
               <li class="nav-item">
@@ -88,7 +88,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
 <center>
 <iframe
-    src="https://player.twitch.tv/?channel=mythrodak&muted=false&parent=mythrodak.com"
+    src="https://player.twitch.tv/?channel=mythrodak&muted=false&parent=creavites.github.io"
     height="480"
     width="852"
     class="chat"
@@ -98,7 +98,7 @@ https://templatemo.com/tm-546-sixteen-clothing
     allowfullscreen="true">
 </iframe>
 
-<iframe src="https://www.twitch.tv/embed/mythrodak/chat?darkpopout=true&parent=mythrodak.com"
+<iframe src="https://www.twitch.tv/embed/mythrodak/chat?darkpopout=true&parent=creavites.github.io"
         height="480"
         width="auto">
 </iframe>
