--- a/prisons-escaped.html
+++ b/prisons-escaped.html
@@ -35,14 +35,14 @@ https://templatemo.com/tm-546-sixteen-clothing
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a href="http://mythrodak.com"><img src="assets/images/mythroicon.png" height="50">
+          <a href="http://creavites.github.io"><img src="assets/images/mythroicon.png" height="50">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="http://mythrodak.com">Home
+                <a class="nav-link" href="http://creavites.github.io/Mythrodak">Home
                 </a>
               </li> 
               <li class="nav-item active">
