--- a/twitch.html
+++ b/twitch.html
@@ -45,7 +45,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="http://creavites.github.io">Home
+                <a class="nav-link" href="http://creavites.github.io/Mythrodak">Home
                 </a>
               </li> 
               <li class="nav-item">
