--- a/twitch.html
+++ b/twitch.html
@@ -38,7 +38,7 @@ https://templatemo.com/tm-546-sixteen-clothing
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a href="http://creavites.github.io"><img src="assets/images/mythroicon.png" height="50">
+          <a href="http://creavites.github.io/Mythrodak"><img src="assets/images/mythroicon.png" height="50">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
